# hands_service_test_task

./: .gitignore  README.md  pyproject.toml
src/: task1.py  task2.py
tests/: test_task1.py  test_task2.py
