[tool.poetry]
name = "hands_service_test_task"
version = "0.1.0"
description = ""
authors = ["Anton <tonatoz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
asyncio = "^3.4.3"
loguru = "^0.5.3"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"


[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
